--- a/TakeBackChatter/Credits.html
+++ b/TakeBackChatter/Credits.html
@@ -1,14 +1,14 @@
 <html><head><title>Credits</title></head>
 <body bgcolor="white">
 <center>
-<font face="Lucida Grande">Anti-spam for Chatter<br>
+<font face="Lucida Grande">Take Back Chatter<br>
 <a href="http://www.pocketsoap.com/osx/chatter/">http://www.pocketsoap.com/osx/chatter</a>
 </font>
 
 <br><br><br>
 <font face="Lucida Grande" size="-1">
-Includes <a href="http://www.harmless.de/cocoa-code.php">AMCollectionView</a> by Andreas Mayer.<br>
-Includes <a href="http://andymatuschak.org/pages/sparkle">Sparkle</a> code by Andy Matuschak.
+Includes <a href="http://www.harmless.de/cocoa-code.php">AMCollectionView</a> by Andreas Mayer, <a href="http://andymatuschak.org/pages/sparkle">Sparkle</a> by Andy Matuschak,
+ and <a href="https://github.com/lok/BayesianKit">BayesianKit</a> by Samuel Mendes.
 </font>
 </center>
 </body>
